--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -8,23 +8,43 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install tools
+        shell: bash
         run: |
+          set -euxo pipefail
+          # Syft + Grype
           curl -sSfL https://raw.githubusercontent.com/anchore/syft/main/install.sh | sh -s -- -b /usr/local/bin
           curl -sSfL https://raw.githubusercontent.com/anchore/grype/main/install.sh | sh -s -- -b /usr/local/bin
+          # Python tools
           python3 -m pip install --upgrade pip
           python3 -m pip install bandit semgrep
+          # Gitleaks
           curl -sSL https://github.com/gitleaks/gitleaks/releases/latest/download/gitleaks-linux-amd64.tar.gz \
             | tar -xz -C /usr/local/bin gitleaks
+          # Trivy
           curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh -s -- -b /usr/local/bin
-          sudo apt-get update && sudo apt-get install -y chromium-browser
+          # HTML→PDF (more reliable than Chromium in Actions)
+          sudo apt-get update
+          sudo apt-get install -y wkhtmltopdf
 
-      - name: Run scans
+      - name: Run scans and build report
         shell: pwsh
         run: |
-          ./run_all.ps1 -RepoPath ./ -VenvSite ""     # scan repo only
-          python3 Report_Script.py                     # writes run_artifacts/report.html
-          chromium-browser --headless --disable-gpu \
-            --print-to-pdf=run_artifacts/report.pdf run_artifacts/report.html
+          New-Item -ItemType Directory -Force run_artifacts | Out-Null
+
+          # SBOM + vuln scan (produces run_artifacts/grype*.json etc.)
+          ./run_all.ps1 -RepoPath ./ -VenvSite ""
+
+          # Optional analyzers (don’t fail build if findings/non-zero exit)
+          & semgrep --config auto --json --output run_artifacts/semgrep.json . ; if ($LASTEXITCODE -ne 0) { $LASTEXITCODE = 0 }
+          & bandit -r . -f json -o run_artifacts/bandit.json                     ; if ($LASTEXITCODE -ne 0) { $LASTEXITCODE = 0 }
+          & gitleaks detect --source . -f json -r run_artifacts/gitleaks.json    ; if ($LASTEXITCODE -ne 0) { $LASTEXITCODE = 0 }
+          & trivy config --format json --output run_artifacts/trivy_config.json .; if ($LASTEXITCODE -ne 0) { $LASTEXITCODE = 0 }
+
+          # Build HTML report from JSONs
+          python3 Report_Script.py
+
+          # Render PDF
+          wkhtmltopdf run_artifacts/report.html run_artifacts/report.pdf
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
