--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -14,15 +14,15 @@ jobs:
           # Syft + Grype
           curl -sSfL https://raw.githubusercontent.com/anchore/syft/main/install.sh | sh -s -- -b /usr/local/bin
           curl -sSfL https://raw.githubusercontent.com/anchore/grype/main/install.sh | sh -s -- -b /usr/local/bin
-          # Python tools
+          # Python deps
           python3 -m pip install --upgrade pip
-          python3 -m pip install bandit semgrep
+          python3 -m pip install jinja2 bandit semgrep
           # Gitleaks
           curl -sSL https://github.com/gitleaks/gitleaks/releases/latest/download/gitleaks-linux-amd64.tar.gz \
             | tar -xz -C /usr/local/bin gitleaks
           # Trivy
           curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh -s -- -b /usr/local/bin
-          # HTML→PDF (more reliable than Chromium in Actions)
+          # HTML→PDF
           sudo apt-get update
           sudo apt-get install -y wkhtmltopdf
 
@@ -31,18 +31,17 @@ jobs:
         run: |
           New-Item -ItemType Directory -Force run_artifacts | Out-Null
 
-          # SBOM + vuln scan (produces run_artifacts/grype*.json etc.)
+          # SBOM + Grype
           ./run_all.ps1 -RepoPath ./ -VenvSite ""
 
-          # Optional analyzers (don’t fail build if findings/non-zero exit)
+          # Extra analyzers (don’t fail job if they exit non-zero)
           & semgrep --config auto --json --output run_artifacts/semgrep.json . ; if ($LASTEXITCODE -ne 0) { $LASTEXITCODE = 0 }
           & bandit -r . -f json -o run_artifacts/bandit.json                     ; if ($LASTEXITCODE -ne 0) { $LASTEXITCODE = 0 }
           & gitleaks detect --source . -f json -r run_artifacts/gitleaks.json    ; if ($LASTEXITCODE -ne 0) { $LASTEXITCODE = 0 }
           & trivy config --format json --output run_artifacts/trivy_config.json .; if ($LASTEXITCODE -ne 0) { $LASTEXITCODE = 0 }
 
-          # Build HTML report from JSONs
+          # Build HTML
           python3 Report_Script.py
-
           # Render PDF
           wkhtmltopdf run_artifacts/report.html run_artifacts/report.pdf
 
