--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -21,19 +21,16 @@ jobs:
           python3 -m pip install --user jinja2 bandit semgrep
           echo "$HOME/.local/bin" >> "$GITHUB_PATH"
 
-          # Gitleaks (use release asset; the old install script 404s)
-          mkdir -p "$HOME/.local/bin"
-          GL_TGZ="gitleaks_$(uname -s)_$(uname -m).tar.gz"     # e.g. gitleaks_Linux_x86_64.tar.gz
-          curl -sSL -o /tmp/$GL_TGZ "https://github.com/gitleaks/gitleaks/releases/latest/download/$GL_TGZ"
-          tar -xzf /tmp/$GL_TGZ -C "$HOME/.local/bin" gitleaks
-          "$HOME/.local/bin/gitleaks" version
-
           # Trivy
           curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh -s -- -b /usr/local/bin
 
           # HTML → PDF
           sudo apt-get update
           sudo apt-get install -y wkhtmltopdf
+
+          # Gitleaks via Docker (avoids asset-name guessing)
+          docker --version
+          docker pull zricethezav/gitleaks:latest
 
       - name: Run scans and build report
         shell: pwsh
@@ -49,10 +46,15 @@ jobs:
           # Extra analyzers
           python3 -m semgrep --config auto --json --output run_artifacts/semgrep.json .
           python3 -m bandit  -r . -f json -o run_artifacts/bandit.json
-          gitleaks detect --source . -f json -r run_artifacts/gitleaks.json
+
+          # Gitleaks (Docker)
+          $workspace = "$env:GITHUB_WORKSPACE".Replace('\','/')
+          docker run --rm -v "${workspace}:/repo" zricethezav/gitleaks:latest \
+            detect --source=/repo -f json -r /repo/run_artifacts/gitleaks.json
+
           trivy config --format json --output run_artifacts/trivy_config.json .
 
-          # Build minimal HTML report (portable; no native WeasyPrint deps)
+          # Build minimal HTML report
           @'
           import json, os, datetime
           from jinja2 import Template
