--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   scan:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
 
@@ -18,16 +19,18 @@ jobs:
           curl -sSfL https://raw.githubusercontent.com/anchore/syft/main/install.sh  | sh -s -- -b /usr/local/bin
           curl -sSfL https://raw.githubusercontent.com/anchore/grype/main/install.sh | sh -s -- -b /usr/local/bin
 
-          # Python deps for report + linters
+          # Python deps (report + analyzers)
           python3 -m pip install --upgrade pip
           python3 -m pip install jinja2 bandit semgrep
 
-          # Gitleaks (correct URL; install into ~/.local/bin and put it on PATH)
-          curl -sSfL https://raw.githubusercontent.com/gitleaks/gitleaks/main/install.sh | sh -s -- -b "$HOME/.local/bin"
+          # Gitleaks (correct URL includes scripts/)
+          curl -sSfL https://raw.githubusercontent.com/gitleaks/gitleaks/main/scripts/install.sh \
+            | sh -s -- -b "$HOME/.local/bin"
           echo "$HOME/.local/bin" >> "$GITHUB_PATH"
 
           # Trivy
-          curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh -s -- -b /usr/local/bin
+          curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh \
+            | sh -s -- -b /usr/local/bin
 
           # HTML → PDF
           sudo apt-get update
@@ -38,16 +41,24 @@ jobs:
         run: |
           New-Item -ItemType Directory -Force run_artifacts | Out-Null
 
-          # SBOM + Grype for the repo (no venv in CI)
+          # SBOM + Grype (PowerShell script in repo)
           ./run_all.ps1 -RepoPath ./ -VenvSite ""
 
-          # Extra analyzers (don’t fail the job if these exit non-zero)
-          & semgrep --config auto --json --output run_artifacts/semgrep.json .            ; if ($LASTEXITCODE -ne 0) { $LASTEXITCODE = 0 }
-          & bandit -r . -f json -o run_artifacts/bandit.json                               ; if ($LASTEXITCODE -ne 0) { $LASTEXITCODE = 0 }
-          & gitleaks detect --source . -f json -r run_artifacts/gitleaks.json              ; if ($LASTEXITCODE -ne 0) { $LASTEXITCODE = 0 }
-          & trivy config --format json --output run_artifacts/trivy_config.json .          ; if ($LASTEXITCODE -ne 0) { $LASTEXITCODE = 0 }
+          # Extra analyzers (don’t fail job if a tool returns non-zero)
+          if (Get-Command semgrep -ErrorAction SilentlyContinue) {
+            & semgrep --config auto --json --output run_artifacts/semgrep.json . ; if ($LASTEXITCODE -ne 0) { $LASTEXITCODE = 0 }
+          }
+          if (Get-Command bandit -ErrorAction SilentlyContinue) {
+            & bandit -r . -f json -o run_artifacts/bandit.json ; if ($LASTEXITCODE -ne 0) { $LASTEXITCODE = 0 }
+          }
+          if (Get-Command gitleaks -ErrorAction SilentlyContinue) {
+            & gitleaks detect --source . -f json -r run_artifacts/gitleaks.json ; if ($LASTEXITCODE -ne 0) { $LASTEXITCODE = 0 }
+          }
+          if (Get-Command trivy -ErrorAction SilentlyContinue) {
+            & trivy config --format json --output run_artifacts/trivy_config.json . ; if ($LASTEXITCODE -ne 0) { $LASTEXITCODE = 0 }
+          }
 
-          # Build HTML + PDF from collected JSON
+          # Build HTML (Python script in repo) and render PDF
           python3 make_report.py
           wkhtmltopdf run_artifacts/report.html run_artifacts/report.pdf
 
