--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -15,17 +15,22 @@ jobs:
         shell: bash
         run: |
           set -euxo pipefail
+
           # Syft + Grype
           curl -sSfL https://raw.githubusercontent.com/anchore/syft/main/install.sh  | sh -s -- -b /usr/local/bin
           curl -sSfL https://raw.githubusercontent.com/anchore/grype/main/install.sh | sh -s -- -b /usr/local/bin
 
-          # Python deps (report + analyzers)
+          # Python deps
           python3 -m pip install --upgrade pip
           python3 -m pip install jinja2 bandit semgrep
 
-          # Gitleaks (correct URL includes scripts/)
-          curl -sSfL https://raw.githubusercontent.com/gitleaks/gitleaks/main/scripts/install.sh \
-            | sh -s -- -b "$HOME/.local/bin"
+          # Gitleaks — install from release tarball (reliable)
+          curl -sSfL \
+            https://github.com/gitleaks/gitleaks/releases/latest/download/gitleaks_Linux_x86_64.tar.gz \
+            -o /tmp/gitleaks.tar.gz
+          mkdir -p "$HOME/.local/bin"
+          tar -xzf /tmp/gitleaks.tar.gz -C "$HOME/.local/bin" gitleaks
+          chmod +x "$HOME/.local/bin/gitleaks"
           echo "$HOME/.local/bin" >> "$GITHUB_PATH"
 
           # Trivy
@@ -41,10 +46,10 @@ jobs:
         run: |
           New-Item -ItemType Directory -Force run_artifacts | Out-Null
 
-          # SBOM + Grype (PowerShell script in repo)
+          # SBOM + Grype (script in repo)
           ./run_all.ps1 -RepoPath ./ -VenvSite ""
 
-          # Extra analyzers (don’t fail job if a tool returns non-zero)
+          # Extra analyzers (don't fail the job on non-zero tool exit)
           if (Get-Command semgrep -ErrorAction SilentlyContinue) {
             & semgrep --config auto --json --output run_artifacts/semgrep.json . ; if ($LASTEXITCODE -ne 0) { $LASTEXITCODE = 0 }
           }
@@ -58,7 +63,7 @@ jobs:
             & trivy config --format json --output run_artifacts/trivy_config.json . ; if ($LASTEXITCODE -ne 0) { $LASTEXITCODE = 0 }
           }
 
-          # Build HTML (Python script in repo) and render PDF
+          # Build HTML from repo script, then PDF
           python3 make_report.py
           wkhtmltopdf run_artifacts/report.html run_artifacts/report.pdf
 
